blocchi colorati layout chat

--- a/Milestone_1/index.html
+++ b/Milestone_1/index.html
@@ -17,8 +17,12 @@
   <body>
     <!-- widescreen-->
     <div class="bg_screen">
-      <div class="green"></div>
-      <div class="gray"></div>
+      <div class="green">
+        <div class="users"></div>
+      </div>
+      <div class="gray">
+        <div class="chat_users"></div>
+      </div>
     </div>
 
     <script src="./assets/js/script.js"></script>
