--- a/Milestone_1/index.html
+++ b/Milestone_1/index.html
@@ -15,13 +15,27 @@
     <title>Boolzapp</title>
   </head>
   <body>
-    <!-- widescreen-->
+    <!-- background-->
     <div class="bg_screen">
       <div class="green">
-        <div class="users"></div>
+        <div class="users">
+          <div class="user_name">
+            <div class="photo_profile">
+              <img class="user" src="./assets/img/avatar_io.jpg" alt="" />
+              <p>Nome utente</p>
+              <div class="icons">
+                <i class="fas fa-circle-notch fa-2x"></i>
+                <i class="fas fa-comment-alt fa-2x"></i>
+                <i class="fas fa-ellipsis-v fa-2x"></i>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="gray">
-        <div class="chat_users"></div>
+        <div class="chat_users">
+          <div class="conversation"></div>
+        </div>
       </div>
     </div>
 
