--- a/Milestone_1/index.html
+++ b/Milestone_1/index.html
@@ -30,6 +30,20 @@
               </div>
             </div>
           </div>
+          <div class="user_last_access">
+            <div class="photo_profile_1">
+              <img class="user_1" src="./assets/img/avatar_1.jpg" alt="" />
+            </div>
+            <div class="text">
+              <p>Michele</p>
+              <p>Ultimo accesso oggi alle</p>
+            </div>
+            <div class="icons_1">
+              <i class="fas fa-search fa-2x"></i>
+              <i class="fas fa-paperclip fa-2x"></i>
+              <i class="fas fa-ellipsis-v fa-2x"></i>
+            </div>
+          </div>
         </div>
       </div>
       <div class="gray">
