Sezione notifiche desktop

--- a/Milestone_1/index.html
+++ b/Milestone_1/index.html
@@ -15,10 +15,11 @@
     <title>Boolzapp</title>
   </head>
   <body>
-    <!-- background-->
+    <!-- background widescreen-->
     <div class="bg_screen">
       <div class="green">
         <div class="users">
+          <!-- icona profilo -->
           <div class="user_name">
             <div class="photo_profile">
               <img class="user" src="./assets/img/avatar_io.jpg" alt="" />
@@ -30,6 +31,7 @@
               </div>
             </div>
           </div>
+          <!-- ultimo accesso dell'utente -->
           <div class="user_last_access">
             <div class="photo_profile_1">
               <img class="user_1" src="./assets/img/avatar_1.jpg" alt="" />
