sezione barra di ricerca

--- a/Milestone_1/index.html
+++ b/Milestone_1/index.html
@@ -50,7 +50,30 @@
       </div>
       <div class="gray">
         <div class="chat_users">
-          <div class="conversation"></div>
+          <!-- barra laterale -->
+          <div class="sidebar">
+            <!-- banner notifiche -->
+            <div class="notifiche">
+              <div class="bell">
+                <i class="fas fa-bell-slash fa-2x"></i>
+              </div>
+              <div class="message">
+                <p>Ricevi notifiche di nuovi messaggi</p>
+                <p class="notify_desk">Attiva notifiche desktop</p>
+              </div>
+            </div>
+            <!-- barra di ricerca -->
+            <div class="search">
+              <div class="barra">
+                <i class="fas fa-search fa-lg new_search"></i>
+                <input
+                  type="text"
+                  placeholder="Cerca o inizia una nuova chat"
+                  class="research"
+                />
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
