contact list doesn't work properly

--- a/Milestone_1/index.html
+++ b/Milestone_1/index.html
@@ -73,6 +73,12 @@
                 />
               </div>
             </div>
+            <!-- lista dei contatti -->
+            <div class="contacts" id="app">
+              <div class="list" v-for="contatto in contatti">
+                {{contatto.nome}}
+              </div>
+            </div>
           </div>
         </div>
       </div>
