contact list doesn't work properly

--- a/Milestone_1/index.html
+++ b/Milestone_1/index.html
@@ -76,7 +76,7 @@
             <!-- lista dei contatti -->
             <div class="contacts" id="app">
               <div class="list" v-for="contatto in contatti">
-                {{contatto.nome}}
+                {{contatto.nome}}{{contatto.img}}
               </div>
             </div>
           </div>
