--- a/Milestone_2/index.html
+++ b/Milestone_2/index.html
@@ -101,14 +101,12 @@
             <!-- area messaggi -->
             <div class="message_area">
               <div class="chat">
-                <div class="conversations">
-                  <div
-                    class="message"
-                    :class="message.status"
-                    v-for="(message, index) in contacts[activeContact].messages "
-                  >
-                    {{ message.text }}
-                  </div>
+                <div
+                  :class="message.status"
+                  v-for="(message, index) in contacts[activeContact].messages "
+                >
+                  {{ message.text }}
+                  <div class="date">{{ message.date }}</div>
                 </div>
               </div>
               <div class="new_message">
@@ -120,6 +118,8 @@
                     class="digit_message"
                     type="text"
                     placeholder="Scrivi un messaggio"
+                    v-model="messageText"
+                    @keyup.enter="addText"
                   />
                 </div>
                 <div class="microphone">
